Switch to unbounded virtual threads