@@ -36,8 +36,8 @@ public final class DiskCacheGarbageCollectorIdleTask implements IdleTask {
   private final DiskCacheGarbageCollector gc;
 
   private static final ExecutorService executorService =
-      Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors(),
-          new ThreadFactoryBuilder().setNameFormat("disk-cache-gc-%d").build());
+      Executors.newThreadPerTaskExecutor(
+          Thread.ofVirtual().name("disk-cache-gc-", 0).factory());
 
   private DiskCacheGarbageCollectorIdleTask(Duration delay, DiskCacheGarbageCollector gc) {
     this.delay = delay;
